# ark-sdk-golang

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  LICENSE.txt  Makefile  NOTICES.md  README.md  SECURITY.md  coverage.html  coverage.out  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  test_results.txt  versions.json
.github/workflows/: build.yml  docs.yml
1.0.0/: 404.html  index.html
1.0.0/architecture/: index.html
1.0.0/getting_started/: index.html
1.0.0/license/: index.html
1.0.0/search/: search_index.json
1.2.0/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  index.html
1.3.0/architecture/: index.html
1.3.0/getting_started/: index.html
1.3.0/license/: index.html
1.3.0/search/: search_index.json
1.3.1/search/: search_index.json
1.4.1/license/: index.html
1.4.1/search/: search_index.json
1.4.5/: 404.html
1.4.5/getting_started/: index.html
cmd/: ark.go
docs/: getting_started.md  index.md  license.md
examples/: add_safe_account.go  add_uap_db_policy.go  add_uap_sca_policy.go  add_uap_vm_policy.go  configure_and_install_sia_connector.go  configure_pool.go  create_db_environment.go  create_user_and_role.go  generate_sso_password.go  get_account_credentials.go  list_identities.go  list_pcloud_accounts.go  list_sessions.go  onboard_db.go  onboard_db_secret.go  onboard_target_set.go  ssh_ca_key_generate_new.go  test_connector_reachability.go
pkg/: ark_api.go  ark_api_services.go  ark_api_test.go
scripts/: build.sh  build_goreleaser.sh  golint.sh  publish_docs.sh  release_goreleaser.sh
tools/: tools.go
(+834 files in other folders)
