[tool.poetry]
name = "ark-sdk-golang"
version = "1.2.0"
description='Official Ark SDK / CLI for CyberArk Identity Security Platform'
authors = ["CyberArk <cyberark@cyberark.com>", "Ofir Iluz <ofir.iluz@cyberark.com"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Intended Audience :: Developers',
    'Natural Language :: English'
]
repository = "https://github.com/cyberark/ark-sdk-golang"

[tool.poetry.group.dev.dependencies]
mike = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-material = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
pymdown-extensions = "*"

[tool.poetry.dependencies]
python = "^3.11"
